Fix overflow paragraph first product in home page-1

--- a/src/pages/home/Home.module.scss
+++ b/src/pages/home/Home.module.scss
@@ -70,7 +70,7 @@
         }
       }
       @include m.respond(mobile-small) {
-        width: 100%;
+        width: 90%;
       }
       div p:last-child {
         margin-top: 2.4rem;
